# kodivault

./: .gitignore  LICENSE  README.md  docker-compose.yml  quickstart.sh
frontend/: INTEGRATION_NOTES.md  bun.lockb  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: critical-paths.spec.ts  fixtures.ts
frontend/src/: main.tsx  routeTree.gen.ts  router.tsx  styles.css
frontend/src/components/: ConnectWalletButton.tsx  SiteFooter.tsx  SiteHeader.tsx  StatusBadge.tsx  ThemeToggle.tsx  VaultCard.tsx
frontend/src/context/: AuthContext.tsx  SolanaProvider.tsx  ThemeContext.tsx
frontend/src/features/: README.ts
frontend/src/features/admin/: hooks.ts  index.ts  types.ts
frontend/src/features/landlord/: hooks.ts  index.ts  types.ts
frontend/src/features/shared/: DropzoneImageUploader.tsx  ProfileSettings.tsx  hooks.ts  index.ts  types.ts  utils.ts
frontend/src/features/tenant/: BrowseProperties.tsx  Dashboard.tsx  InspectionFlow.tsx  LeaseWizard.tsx  hooks.ts  index.ts  types.ts
frontend/src/hooks/: useSolanaEscrow.ts
frontend/src/routes/: __root.tsx  admin.tsx  disputes.index.tsx  disputes.new.tsx  index.tsx  leases.$leaseId.tsx  leases.index.tsx  login.tsx  properties.$propertyId.tsx  properties.index.tsx  properties.new.tsx  register.tsx
frontend/src/services/: SolanaService.ts  api.ts  escrow.ts  index.ts  types.ts
solana-contracts/: Anchor.toml
solana-contracts/programs/kodivault/: Cargo.toml
solana-contracts/programs/kodivault/src/: lib.rs
